# thymia-sentinel-integrations

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: docs-test.yml  docs.yml  publish.yml
1.0.0/: 404.html  index.html  sitemap.xml
1.0.0/api/: index.html
1.0.0/concepts/architecture/: index.html
1.0.0/concepts/biomarkers/: index.html
1.0.0/concepts/policies/: index.html
1.0.0/concepts/why-multimodal/: index.html
1.0.0/getting-started/installation/: index.html
1.0.0/getting-started/quickstart/: index.html
1.0.0/integrations/gemini/: index.html
1.0.0/integrations/livekit/: index.html
1.0.0/integrations/pipecat/: index.html
1.0.0/integrations/vapi/: index.html
1.0.0/search/: search_index.json
1.1.0/: 404.html  index.html  sitemap.xml
1.1.0/api/: index.html
1.1.0/concepts/architecture/: index.html
1.1.0/concepts/biomarkers/: index.html
1.1.0/concepts/policies/: index.html
1.1.0/concepts/why-multimodal/: index.html
1.1.0/getting-started/installation/: index.html
1.1.0/getting-started/quickstart/: index.html
1.1.0/integrations/gemini/: index.html
1.1.0/integrations/livekit/: index.html
1.1.0/integrations/pipecat/: index.html
1.1.0/integrations/vapi/: index.html
1.1.0/search/: search_index.json
1.2.0/: 404.html  index.html  sitemap.xml
1.2.0/api/: index.html
1.2.0/concepts/architecture/: index.html
1.2.0/concepts/biomarkers/: index.html
1.2.0/concepts/policies/: index.html
1.2.0/concepts/why-multimodal/: index.html
1.2.0/getting-started/installation/: index.html
1.2.0/getting-started/quickstart/: index.html
1.2.0/integrations/gemini/: index.html
1.2.0/integrations/livekit/: index.html
1.2.0/integrations/pipecat/: index.html
1.2.0/integrations/vapi/: index.html
1.2.0/search/: search_index.json
1.2.1/: 404.html  index.html  objects.inv  sitemap.xml
1.2.1/api/: index.html
1.2.1/concepts/architecture/: index.html
1.2.1/concepts/biomarkers/: index.html
1.2.1/concepts/policies/: index.html
1.2.1/concepts/why-multimodal/: index.html
1.2.1/getting-started/installation/: index.html
1.2.1/getting-started/quickstart/: index.html
1.2.1/integrations/gemini/: index.html
1.2.1/integrations/livekit/: index.html
1.2.1/integrations/openai-realtime/: index.html
1.2.1/integrations/pipecat/: index.html
1.2.1/integrations/vapi/: index.html
1.2.1/search/: search_index.json
docs/: index.md
docs/api/: index.md
docs/concepts/: architecture.md  biomarkers.md  policies.md  why-multimodal.md
docs/getting-started/: installation.md  quickstart.md
docs/integrations/: gemini.md  livekit.md  openai-realtime.md  pipecat.md  vapi.md
examples/gemini_live/: .env.example  README.md  pyproject.toml
examples/gemini_live/src/: agent.py  prompts.py
examples/livekit/: .env.example  README.md  pyproject.toml
examples/livekit/src/: agent.py  prompts.py  tools.py
examples/livekit/src/livekit/plugins/thymia/: __init__.py  sentinel.py
examples/openai_realtime/: .env.example  README.md  pyproject.toml
examples/openai_realtime/src/: agent.py  display.py  prompts.py
examples/pipecat/: README.md  pyproject.toml
examples/pipecat/src/: agent.py  prompts.py
examples/vapi_api/: README.md  pyproject.toml
examples/vapi_api/src/: agent.py
gemini_live/: README.md
gemini_live/src/: agent.py  prompts.py
gemini_live/src/thymia/: __init__.py  sentinel.py
live_api/: README.md  pyproject.toml
live_api/src/thymia/: sentinel.py
livekit/: .env.example  README.md  pyproject.toml
livekit/src/: agent.py  tools.py
livekit/src/livekit/plugins/thymia/: __init__.py  sentinel.py
pipecat/: .env.example  README.md  pyproject.toml
pipecat/src/: agent.py
pipecat/src/thymia/: __init__.py  sentinel.py
vapi_api/: .env.example  README.md  pyproject.toml
vapi_api/src/: agent.py  prompts.py
vapi_api/src/thymia/: __init__.py  sentinel.py
