[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "livekit-thymia-sentinel-example"
version = "1.0.0"
description = "LiveKit voice AI agent with Thymia Sentinel biomarker monitoring"
requires-python = ">=3.10"

dependencies = [
    "thymia-sentinel",
    "aiohttp>=3.13.0",
    "livekit-agents[silero,turn-detector]~=1.2",
    "livekit-plugins-deepgram>=1.2.15",
    "livekit-plugins-speechmatics~=1.4",
    "livekit-plugins-noise-cancellation~=0.2",
    "livekit-plugins-openai>=1.2.15",
    "livekit-plugins-rime>=1.2.15",
    "numpy>=2.0.2",
    "python-dotenv",
    "loguru>=0.7.3",
]

[tool.uv.sources]
thymia-sentinel = { path = "../../packages/thymia-sentinel", editable = true }

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "UP", "SIM", "RUF"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
