[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openai-realtime-thymia-sentinel-example"
version = "1.0.0"
description = "OpenAI Realtime API voice assistant with Thymia Sentinel biomarker monitoring"
requires-python = ">=3.11"

dependencies = [
    "loguru>=0.7.3",
    "pyaudio>=0.2.14",
    "python-dotenv",
    "thymia-sentinel>=1.0.0",
    "websockets>=12.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
