[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vapi-thymia-sentinel-example"
version = "1.0.0"
description = "VAPI voice AI integration with Thymia Sentinel biomarker monitoring"
requires-python = ">=3.10"

dependencies = [
    "thymia-sentinel",
    "python-dotenv",
    "websockets>=15.0.1",
    "httpx>=0.27.0",
    "pyaudio>=0.2.14",
]

[tool.uv.sources]
thymia-sentinel = { path = "../../packages/thymia-sentinel", editable = true }

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "UP", "SIM", "RUF"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"